자바 버전 구현 완료

--- a/app/src/main/res/layout/activity_repository.xml
+++ b/app/src/main/res/layout/activity_repository.xml
@@ -51,7 +51,7 @@
                     tools:text="username/myrepository"/>
 
                 <TextView
-                    android:id="@+id/starts_text_view"
+                    android:id="@+id/stars_text_view"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/ic_star_black"
